--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ h2{
 	line-height: :24px;
 	text-align: left;
 	margin-left: 10px;
-	margin-right: 10px;
+	margin-right: 20px;
+
 }
 h3{
 	
@@ -69,6 +70,18 @@ h3{
 	text-align: left;
 	margin-left: 10px;
 	margin-right: 10px;
+
+
+}
+h4{
+	
+	
+	font-size: 10px;
+	color: #005883;
+	line-height: :24px;
+	text-align: left;
+	margin-right: 140px;
+
 
 }
 
@@ -100,7 +113,7 @@ h3{
 	text-align: center;
 	margin-left: 130px;
 	margin-top: 20px;
-	font-size: 18px;
+	font-size: 14px;
 	float:left;
 	border-radius: 10px;
 	border-top-right-radius: 0;
